# kasperjunge.com

./: .env.example  .gitignore  CLAUDE.md  README.md  agr.toml  build.py  docker-compose.yml  index.html  justfile  pyproject.toml  wrangler.jsonc
.github/workflows/: build.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260211_01_create_contact_submissions.py  20260211_02_create_pageviews.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: analytics.py  contact.py
backend/app/core/: config.py  logging_config.py  request_meta.py
backend/app/db/: session.py
backend/app/models/: contact_submission.py  pageview.py
backend/app/schemas/: analytics.py  contact.py
backend/app/services/: analytics_service.py  contact_service.py  rate_limit.py  slack.py
backend/scripts/: run_migrations.sh
backend/tests/: conftest.py  test_analytics_endpoint.py  test_contact_endpoint.py  test_docs_visibility.py  test_rate_limit.py  test_settings_config.py
blog/: index.html
blog/computerlove-vision/: index.html
blog/hello-world/: index.html
contact/: index.html
content/: contact.html  index.html  media.html  services.html
docs/: tone-of-voice.md
media/: index.html
posts/: computerlove-vision.md  hello-world.md  my-claude-code-workflow.md  should-pms-code-with-agents.md  skills-replacing-commands-rules-subagents.md
services/: index.html
static/: config.js  site.js  styles.css
templates/: base.html
(+5 files in other folders)
